# csust-login

./: .gitignore  README.md  config.py  daemon.py  logger.py  login.py  pyproject.toml  requirements.txt
scripts/: bundle_mac.py  bundle_mac_post_script.sh  bundle_win.py
src/csust_login/: config.py  daemon.py  logger.py  login.py  ui.py  utils.py
src/csust_login/resources/icons/: app_icon.icns
src/csust_login/ui/: __main__.py  config_path.py  logger.py  main_window.py  worker.py
