[project]
name = "csust-login"
version = "0.1.0"
description = ""
authors = [{ name = "zHElEARN", email = "i@zhelearn.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["ruff (>=0.15.6,<0.16.0)"]

[tool.ruff]
line-length = 320

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
